--- a/parcial2/src/app/app.component.html
+++ b/parcial2/src/app/app.component.html
@@ -2,14 +2,17 @@
 <nav class="navbar navbar-expand-lg navbar-light azul">
   <ul class="navbar-nav">
     <li>
-      &nbsp; <img src="https://freepngimg.com/thumb/gift/71372-tv-logo-television-old-android-free-download-image.png" alt="Logo" style="width: 40px" /><a
+      &nbsp; <img src="https://cdn-icons-png.flaticon.com/512/2/2227.png" alt="Logo" style="width: 40px" /><a
         class="navbar-brand"
         href="#"
       >
-        &nbsp; TV Series</a
+        &nbsp;                                                            Bandas Musicales</a
       >
     </li>
   </ul>
 </nav>
 
 <br />
+
+<app-band-list></app-band-list>
+```
